--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "serve": "nxut serve"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.15.1",
     "nuxt": "<2.9"
-  },
-  "devDependencies": {}
+  }
 }
